--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -41,5 +41,17 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${springfromework.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
